make monorepo for frontend and backend